@@ -1,4 +1,4 @@
-;;;; 	Copyright (C) 1996, 1997, 1998, 1999 Free Software Foundation
+;;;; 	Copyright (C) 1996, 1997, 1998, 1999, 2001 Free Software Foundation
 ;;;; 
 ;;;; This program is free software; you can redistribute it and/or modify
 ;;;; it under the terms of the GNU General Public License as published by
